taking into account word wrap and positioning the screen reader content correctly

--- a/src/vs/editor/browser/controller/editContext/native/nativeEditContext.css
+++ b/src/vs/editor/browser/controller/editContext/native/nativeEditContext.css
@@ -10,7 +10,6 @@
 	overflow: hidden;
 	z-index: -10;
 	white-space: pre-wrap;
-	text-wrap: nowrap;
 }
 
 .monaco-editor .native-edit-context-textarea {
